--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="trending__discover" data-aos="zoom-in">
           <p>Discover</p>
         </div>
-        
+
         <section class="trending-drinks">
           <div class="trending__image flex-center">
             <img
@@ -332,8 +332,20 @@
             </ul>
           </div>
         </section>
+      </section>
 
-        
+      <section class="subscription flex-center" id="services">
+        <h2 data-aos="flip-down">
+          Get offers straight <br />
+          to your inbox
+        </h2>
+
+        <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
+
+        <div class="subscription__form" data-aos="fade-up">
+          <input type="text" placeholder="Enter your email address" />
+          <button>Get Started</button>
+        </div>
       </section>
     </main>
   </body>
