--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta
+      name="description"
+      content="Experience the freshest, most delicious sushi crafted with authentic Japanese flavors. From perfectly rolled maki to melt-in-your-mouth nigiri, every bite is a taste of Japan. Order now and indulge in sushi perfection."
+    />
+
+    <meta name="author" content="Bikram Pal" />
+    <meta name="keyword" content="sushi, food, japanese, drinks" />
+
+    <meta property="og:title" content="SushiKai" />
+    <meta
+      property="og:description"
+      content="Experience the freshest, most delicious sushi crafted with authentic Japanese flavors. From perfectly rolled maki to melt-in-your-mouth nigiri, every bite is a taste of Japan. Order now and indulge in sushi perfection."
+    />
+    <meta property="og:image" content="https://i.ibb.co/gZrZrRf2/sushi-1.png" />
+
     <link rel="icon" href="./sushi.png" type="image/png" />
     <link rel="stylesheet" href="./css/style.css" />
 
