netlify-forms added

--- a/index.html
+++ b/index.html
@@ -363,8 +363,10 @@
         <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
 
         <div class="subscription__form" data-aos="fade-up">
-          <input type="text" placeholder="Enter your email address" />
-          <button>Get Started</button>
+          <form name="sign-up" netlify>
+            <input type="email" name="email" placeholder="Enter your email address" />
+            <button>Get Started</button>
+          </form>
         </div>
       </section>
     </main>
