reqiured attb add

--- a/index.html
+++ b/index.html
@@ -364,7 +364,12 @@
 
         <div class="subscription__form" data-aos="fade-up">
           <form name="sign-up" netlify>
-            <input type="email" name="email" placeholder="Enter your email address" />
+            <input
+              type="email"
+              name="email"
+              placeholder="Enter your email address"
+              required
+            />
             <button>Get Started</button>
           </form>
         </div>
